--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -8,23 +8,39 @@ jobs:
     name: Run tests
     runs-on: ubuntu-latest
 
+
     steps:
-    - uses: actions/checkout@v4
-      with:
-        persist-credentials: false
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.x"
-    - name: Run tests
-      env:
-        PYTHONPATH: welearn_database
-      run: >-
-        export POETRY_HOME=/opt/poetry
-        python3 -m venv $POETRY_HOME
-        $POETRY_HOME/bin/pip install poetry==2.0.0
-        $POETRY_HOME/bin/poetry install
-        python3 -m unittest discover tests/
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+      # Active un cache pip automatique + expose python-version
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+          cache: "pip"
+
+      - name: Install Poetry with pipx
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install --upgrade pipx
+          pipx install "poetry==2.0.0"
+          poetry --version
+
+      - name: Configure Poetry (no virtualenvs in-project)
+        run: |
+          poetry config virtualenvs.in-project false
+          poetry config installer.max-workers 4
+
+      - name: Install deps
+        run: |
+          poetry install --no-interaction --no-root
+
+      - name: Run tests
+        env:
+          PYTHONPATH: welearn_database
+        run: |
+          # Utilise le venv de Poetry
+          poetry run python -m unittest discover -s tests -p "test_*.py"
 
   build:
     name: Build distribution 📦
