--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Théo",email = "theo.nardin@cri-paris.org"}
 ]
 license = {text = "cc-by-sa-nc"}
-readme = "README.md"
+readme = { file = "README.md", content-type = "text/markdown" }
 requires-python = ">=3.10"
 dependencies = [
     "sqlalchemy (>=2.0.43,<3.0.0)",
